[package]
name = "smart-code-chunker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0.101"
ignore = "0.4.25"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.5"
rayon = "1.11.0"
sha2 = "0.10.6"
hex = "0.4.3"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.15"